# hardmon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: consts.cmake  flags.cmake  options.cmake  packages.cmake
cmake_modules/: Findfftwpp.cmake
config/: reader.yml.sample
src/: CMakeLists.txt
src/hardmon/: CMakeLists.txt
src/hardmon/src/: CFftAnalysis.cpp  CMakeLists.txt  CSensorReader.cpp  CSignalHandler.cpp
src/hardmon/src/plotfile/: CGnuPlotFile.cpp  CMakeLists.txt
src/hardmon/src/sensor/: CMakeLists.txt  CSensorFactory.cpp  CSensorRegularFile.cpp  CSensorSndFile.cpp
src/hardmon/src/storage/: CHdf5Storage.cpp  CMakeLists.txt  CStorage.cpp
src/hardmon/test/: CMakeLists.txt  CSensorReaderTest.cpp  main.cpp
src/hardmon/test/mock/: CStorageMock.hpp
src/include/: CMakeLists.txt
src/include/hardmon/: CFftAnalysis.hpp  CSensorReader.hpp  CSignalHandler.hpp  Types.hpp  Utils.hpp
src/include/hardmon/plotfile/: CGnuPlotFile.hpp  CPlotFileBase.hpp
src/include/hardmon/sensor/: CSensorFactory.hpp  CSensorRegularFile.hpp  CSensorSndFile.hpp  ISensor.hpp
src/include/hardmon/storage/: CHdf5Storage.hpp  CStorage.hpp  IStorage.hpp
src/plotter/src/: CMakeLists.txt  plotter.cpp
src/reader/src/: CMakeLists.txt  reader.cpp
